dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0-M1'
    implementation 'org.yaml:snakeyaml:2.2'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.jetbrains:annotations:24.1.0'
}

sourceCompatibility = 17
targetCompatibility = 17

processResources {
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
    from("src/main/resources") {
        include "plugin.properties"
        expand(
                version: "${project.parent.version}",
                name: project.parent.name,
        )
    }
}

//noinspection GroovyAssignabilityCheck
jar.archiveFileName = "plotsquared-api-${project.parent.version}.jar"
jar.destinationDirectory = file("../mvn/com/plotsquared/plotsquared-api/" + project.parent.version)

publishing {
    publications {
        createPom(MavenPublication) {
            groupId = rootProject.group
            artifactId = "plotsquared-bukkitapi"
            version = rootProject.version

            pom.withXml {
                asNode().appendNode('distributionManagement').appendNode('repository').appendNode('id', 'internal.repo')
                asNode().appendNode('distributionManagement').appendNode('repository').appendNode('url', "../mvn/com/plotsquared/plotsquared-bukkitapi/${project.parent.version}/plotsquared-bukkitapi-${project.parent.version}.pom")
            }
        }
        createPomLatest(MavenPublication) {
            groupId = "com.plotsquared"
            artifactId = "plotsquared-bukkitapi"
            version = "latest"

            pom.withXml {
                asNode().appendNode('distributionManagement').appendNode('repository').appendNode('id', 'internal.repo')
                asNode().appendNode('distributionManagement').appendNode('repository').appendNode('url', "../mvn/com/plotsquared/plotsquared-bukkitapi/latest/plotsquared-bukkitapi-latest.pom")
            }
        }
    }
}

task copyFiles {
    doLast {
        copy {
            from "../mvn/com/plotsquared/plotsquared-api/${project.parent.version}/"
            into '../mvn/com/plotsquared/plotsquared-api/latest/'
            include('*.jar')
            rename ("plotsquared-api-${project.parent.version}.jar", 'plotsquared-api-latest.jar')
        }
    }
}

build.finalizedBy(copyFiles)
copyFiles.dependsOn('publish')